Change the version spec for node

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "main": "src/index.js",
   "engines": {
-    "node": "^4.0.0",
-    "npm": "^2.0.0"
+    "node": ">=4.0.0",
+    "npm": ">=2.0.0"
   },
   "scripts": {
     "test": "mocha tests/*.js",
